--- a/css/inputMobile.css
+++ b/css/inputMobile.css
@@ -413,16 +413,36 @@
 }
 
 .popSliderFraction .current,
-.popSliderFraction i {
+.popImgSliderFraction .current,
+.popImgSliderFraction i,
+.popSlideShowFraction .current,
+.popSliderFraction i,
+.popSlideTimeFraction .current,
+.popSlideTimeFraction i,
+.popSlideShowFraction i
+
+{
   font-family: "IRANSansWeb400";
   font-size: 20px;
   line-height: 31.3px;
   color: #febe1b;
 }
-.popSliderFraction i {
+.popSliderFraction i ,
+.popImgSliderFraction i ,
+.popSlideTimeFraction i ,
+.popSlideShowFraction i 
+
+
+{
   margin: 0 5px;
 }
-.popSliderFraction span {
+.popSliderFraction span ,
+.popImgSliderFraction span ,
+.popSlideTimeFraction span ,
+.popSlideShowFraction span 
+
+
+{
   font-family: "IRANSansWeb400";
   font-size: 15px;
   color: #febe1b;
@@ -765,3 +785,101 @@ text-align: justify;
     font-family: "IRANSansWeb400";
     text-align: justify;
   }
+
+
+  
+.posterShow .readMoreBtn {
+  font-family: "IRANSansWeb300";
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 18.78px;
+  color: #194a96;
+  padding-right: 5%;
+}
+
+
+
+
+.timeline-item__line {
+  position: absolute;
+  right: 0;
+  width: 2px;
+  background: #195549;
+  height: 100%;
+  transform: translate(-50%);
+}
+.timeline-item__line:after {
+  content: "";
+  width: 0;
+  height: 0;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-top: 11px solid #195549;
+  top: 50%;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.timeline-item__indicator {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 36px;
+  height: 36px;
+  border: 1px solid #195549;
+  border-radius: 50%;
+  transform: translate(calc(50% - 2px), -10px);
+    background: #fff;
+  z-index: 1;
+}
+/* .timeline-item__media-wrapper {
+  width: 50%;
+}
+.timeline-item__content-wrapper{
+  width: 50%;
+} */
+.timeline-item:last-of-type .timeline-item__line{
+  display: none;
+}
+
+
+.posterShow .leftSlider .swiper-slide-active .inVideo {
+  filter: grayscale(0) !important;
+  transform: scale(1) !important;
+}
+
+
+.posterShow .videoSliderpagination .swiper-pagination-bullet{
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  opacity: 1;
+  background-color: transparent;
+  border: 1px solid #002B43;
+  transition: 0.5s ease;
+  }
+  .posterShow .videoSliderpagination .swiper-pagination-bullet-active{
+  background-color: #002B43;
+  }
+  
+
+  
+.posterShow .pagination1 i {
+  font-family: "IRANSansWeb700";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 25.04px;
+  color: #ed2289;
+  margin: 0 5px;
+}
+.posterShow .pagination1 .current {
+  font-family: "IRANSansWeb400";
+  font-size: 25px;
+  line-height: 39.13px;
+}
+.posterShow .pagination1 .total {
+  font-family: "IRANSansWeb300";
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 21.91px;
+}
