--- a/css/outputMobile.css
+++ b/css/outputMobile.css
@@ -991,10 +991,6 @@ video {
   margin-top: 2em;
 }
 
-.mt-\[4em\] {
-  margin-top: 4em;
-}
-
 .mt-\[5em\] {
   margin-top: 5em;
 }
@@ -1098,6 +1094,10 @@ video {
   display: grid;
 }
 
+.\!grid {
+  display: grid !important;
+}
+
 .inline-grid {
   display: inline-grid;
 }
@@ -1154,12 +1154,12 @@ video {
   height: 42px;
 }
 
-.h-\[50vh\] {
-  height: 50vh;
+.h-\[50svh\] {
+  height: 50svh;
 }
 
-.h-\[51svh\] {
-  height: 51svh;
+.h-\[50vh\] {
+  height: 50vh;
 }
 
 .h-\[55px\] {
@@ -1188,10 +1188,6 @@ video {
 
 .h-svh {
   height: 100svh;
-}
-
-.h-\[50svh\] {
-  height: 50svh;
 }
 
 .min-h-\[30px\] {
@@ -5027,6 +5023,10 @@ mark {
 
 .\[\&\.OP\]\:grid.OP {
   display: grid;
+}
+
+.\[\&\.OP\]\:\!grid.OP {
+  display: grid !important;
 }
 
 .\[\&\.OpenSearch\]\:translate-y-\[0\].OpenSearch {
