--- a/css/outputMobile.css
+++ b/css/outputMobile.css
@@ -983,6 +983,10 @@ video {
   margin-right: auto;
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -1061,10 +1065,6 @@ video {
 
 .mt-\[2em\] {
   margin-top: 2em;
-}
-
-.mt-\[4em\] {
-  margin-top: 4em;
 }
 
 .mt-\[5em\] {
@@ -1166,12 +1166,12 @@ video {
   display: flow-root;
 }
 
-.grid {
-  display: grid;
-}
-
 .\!grid {
   display: grid !important;
+}
+
+.grid {
+  display: grid;
 }
 
 .inline-grid {
@@ -1236,10 +1236,6 @@ video {
 
 .h-\[50vh\] {
   height: 50vh;
-}
-
-.h-\[51svh\] {
-  height: 51svh;
 }
 
 .h-\[55px\] {
@@ -2081,10 +2077,6 @@ video {
 
 .gap-\[1em\] {
   gap: 1em;
-}
-
-.gap-\[2\.5em\] {
-  gap: 2.5em;
 }
 
 .gap-\[2\.5em\] {
@@ -5385,12 +5377,12 @@ mark {
   }
 }
 
-.\[\&\.OP\]\:grid.OP {
-  display: grid;
-}
-
 .\[\&\.OP\]\:\!grid.OP {
   display: grid !important;
+}
+
+.\[\&\.OP\]\:grid.OP {
+  display: grid;
 }
 
 .\[\&\.OpenSearch\]\:translate-y-\[0\].OpenSearch {
